k8s/dev/api-portal-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx-dev
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  name: api-portal-ing
  namespace: dev
spec:
  rules:
    - host: api-portal.dev-a.k8s.zegal.com
      http:
        paths:
          - backend:
              serviceName: api-portal
              servicePort: 80
            path: /
